[project]
name = "script-module-sniffio"
version = "0.1.0"
description = "Sniff out which async library your code is running under"
authors = [
    { name = "Florence Wolfe", email = "florencewolfe@pm.me" }
]
dependencies = [
    "sniffio>=1.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = []

